# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: Python_CI_4_step.yml
gendiff/: __init__.py  cli.py  diff_tree.py  engine.py
gendiff/formatters/: formatting.py  normalize_data.py  plain_format.py  stylish_format.py
gendiff/scripts/: gendiff.py
gendifff/: __init__.py  cli.py  diff_tree.py  engine.py  generate_diff.py  parser.py
gendifff/formatters/: formatting.py  json_format.py  normalize_data.py  plain_format.py  stylish_format.py
gendifff/scripts/: __init__.py  gendiff.py
tests/: generate_diff_smooth_test.py  test_generate_diff.py
