[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This scripts shows you differences between two files in .json and .yml formats"
authors = ["Maksim Lesnikov <maximborzya75@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]
classifiers = [
    'Development Status :: 4 - Beta',
    'Software Development :: Show differences',
    'Intended Audience :: Developers',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^5.0.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coverage = "^7.0.5"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
